[gd_scene load_steps=2 format=3 uid="uid://cv125qa53qqhg"]

[ext_resource type="Script" path="res://core/hb_color_item.gd" id="1_ev0wq"]

[node name="HBColorItem" type="HBoxContainer"]
script = ExtResource("1_ev0wq")

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="BtnKill" type="Button" parent="."]
layout_mode = 2
text = "X"

[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="picker_created" from="ColorPickerButton" to="." method="_on_color_picker_button_picker_created"]
[connection signal="pressed" from="BtnKill" to="." method="_on_btn_kill_pressed"]
